# KernelMethod

./: CMakeLists.txt  README.md
lib/svm_light/: svm_classify  svm_learn
src/: main.cpp
